# FINESSE

./: .gitignore  FrequencyAllocationPlots.ipynb  FrequencyAllocationRuns.py  PaperPlots.ipynb  README.md  mirage_with_fidelities.ipynb  pyproject.toml  run_parallel.sh
finesse/: __init__.py  ablation.py  benchmarks.py  decompose.py  fidelity.py  inline_pass.py  layout.py  mirror.py  plots.py  routing.py  smoke.py
mirage/: __init__.py  cost.py  decompose.py  mirror.py  pass_.py
scripts/: download_circuits.py  plot_ablation.py  run_ablation.py  run_large_ablation.py  run_lf_uniform_ablation.py  run_redqueen.py
